--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.0'
 services:
   rasa:
-    image: rasa/rasa:latest-full
+    image: rasa/rasa
     ports:
       - 5005:5005
     volumes:
